@@ -1,5 +1,6 @@
 package confdb.gui;
 
+import java.awt.GridLayout;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
@@ -7,20 +8,40 @@ import java.io.InputStreamReader;
 import java.net.URL;
 import java.util.Properties;
 
+import javax.swing.JOptionPane;
+import javax.swing.JPanel;
+
+/**
+ * ConfdbSoftwareVersion
+ * -----------
+ * @author Raul Jimenez Estupinan.
+ * 
+ * Retrieve information about the application.
+ */
 public class ConfdbSoftwareVersion {
 	java.io.BufferedInputStream inputStream;
 	java.io.BufferedOutputStream outputStream;
 	java.io.FileOutputStream fileOutputStream;
 	
 	String URL = "";
-	String confdbVersion = "";
+	String confdbWebVersion = "";
 	String fileName = "confdb.version"; // already deployed in the container.
 	
+	// local confdb.version properties:
+	String confdbUrl = "";
+	String confdbContact = "";
+	String confdbVersion = "";
+	
+	
 	ConfdbSoftwareVersion() {
+		loadLocalProperties();
+		
 		URL = getUrl() + fileName;
 	}
 	
 	ConfdbSoftwareVersion(String url) {
+		loadLocalProperties();
+		
 		URL = url + fileName;
 	}
 
@@ -30,47 +51,60 @@ public class ConfdbSoftwareVersion {
 			URL oracle = new URL(URL);
 	        BufferedReader in = new BufferedReader(new InputStreamReader(oracle.openStream()));
 
-	        confdbVersion = in.readLine(); // the version must be in the first line
+	        confdbWebVersion = in.readLine(); // the version must be in the first line
 	        in.close();
 	        
-	        if(confdbVersion.indexOf("=") != -1) // This is to fix the Properties class format.
-	        	confdbVersion = confdbVersion.substring(confdbVersion.indexOf("=") + 1); 
+	        if(confdbWebVersion.indexOf("=") != -1) // This is to fix the Properties class format.
+	        	confdbWebVersion = confdbWebVersion.substring(confdbWebVersion.indexOf("=") + 1); 
 			
 			
 		} catch (IOException e) {
 			System.err.println("[ERROR][ConfdbSoftwareVersion] Unable to get confdb.version from " + URL);
 			//e.printStackTrace();
 		}
-		return confdbVersion;
+		return confdbWebVersion;
 	}
 	
 	public String CheckSoftwareVersion() {
 
 		// Get client version:
-		InputStream inStream = getClass().getResourceAsStream("/conf/confdb.version");
-	    Properties  properties = new Properties();
-	    try {
-			properties.load(inStream);
-		} catch (IOException e) {
-			System.err.println("[ERROR][CheckSoftwareVersion] unable to load confdb.version file!");
-			e.printStackTrace();
-		}
-		String clientVersion = properties.getProperty("confdb.version");
+		
 		
 		// Get web container version.
 		String containerVersion = getVersionFromWebContainer();
 		
-		if(!clientVersion.equals(containerVersion)) {
+		if(!confdbVersion.equals(containerVersion)) {
 			System.out.println("[WARNING] You are using a lower version of Confdb GUI!");
-			System.out.println("[WARNING] client = " + clientVersion);
+			System.out.println("[WARNING] client = " + confdbVersion);
 			System.out.println("[WARNING] containerVersion = " + containerVersion);
+			
+			
+			String message = 	"A newer version of Confdb-GUI has been released!\n"+
+								"It's highly recommended to get the latest version ("+containerVersion+").\n";
+								
+			JPanel panel = new JPanel();
+	        panel.setLayout(new GridLayout(2, 2));
+			JOptionPane.showMessageDialog(panel, message,"WARNING!", JOptionPane.WARNING_MESSAGE);
 		}
+		
+		loadLocalProperties();
 		
 		return containerVersion;
 	}
 	
 	public String getUrl() {
-		String url_ = "";
+		return confdbUrl;
+	}
+	
+	public String getContact() {
+		return confdbContact;
+	}
+	
+	public String getClientVersion() {
+		return confdbVersion;
+	}
+	
+	public void loadLocalProperties() {
 		// Get client version:
 		InputStream inStream = getClass().getResourceAsStream("/conf/confdb.version");
 	    Properties  properties = new Properties();
@@ -81,9 +115,11 @@ public class ConfdbSoftwareVersion {
 			e.printStackTrace();
 		}
 		
-		url_ = properties.getProperty("confdb.url");
-		
-		return url_;
+		confdbVersion 	= properties.getProperty("confdb.version")	;
+		confdbContact 	= properties.getProperty("confdb.contact")	;
+		confdbUrl 		= properties.getProperty("confdb.url")		;
+
 	}
+	
 	
 }
